--- a/app/views/webhook_events/_webhook_event.html.erb
+++ b/app/views/webhook_events/_webhook_event.html.erb
@@ -3,6 +3,6 @@
     <%= webhook_event.payload %>
   </div>
   <div>
-    <%= time_tag webhook_event.created_at, "data-local": "time-ago" %>
+    <%= time_tag webhook_event.created_at, "data-local": "time-or-date" %>
   </div>
 </div>
