--- a/app/views/subscribers/_webhook_events.html.erb
+++ b/app/views/subscribers/_webhook_events.html.erb
@@ -1,9 +1,5 @@
-<div id="webhook_events">
+<div id="webhook_events" class="container">
   <%= turbo_stream_from subscriber, :webhook_events %>
 
-  <% if subscriber.webhook_events.empty? %>
-    Waiting on your first webhook event
-  <% else %>
-    <%= render subscriber.webhook_events.order('created_at DESC') %>
-  <% end %>
+  <%= render subscriber.webhook_events.order('created_at DESC') %>
 </div>
