--- a/app/views/webhook_events/_webhook_event.html.erb
+++ b/app/views/webhook_events/_webhook_event.html.erb
@@ -1,7 +1,11 @@
-<div class="row bg-white p-3 mt-3" id="<%= dom_id(webhook_event) %>" data-controller="beautifyjson">
+<div class="row bg-white p-1 mt-3" id="<%= dom_id(webhook_event) %>" data-controller="beautifyjson">
   <small class="text-muted">
     <%= time_tag webhook_event.created_at, webhook_event.created_at.localtime.strftime('%Y-%M-%d %H:%M.%S %Z') %>
   </small>
-  <div data-beautifyjson-target="payloadJson" data-actual-json="<%= webhook_event.payload.to_json %>">
+
+  <pre>
+  <div data-beautifyjson-target="payloadJson" data-actual-json="<%= JSON.pretty_generate(webhook_event.payload) %>">
   </div>
+    </pre>
+
 </div>
