--- a/app/views/subscribers/show.html.erb
+++ b/app/views/subscribers/show.html.erb
@@ -1,10 +1,20 @@
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="/">Home</a></li>
+    <li class="breadcrumb-item active" aria-current="page">Subscriber</li>
+    <li class="breadcrumb-item active" aria-current="page">
+      <%= @subscriber.name %>
+    </li>
+  </ol>
+</nav>
 
 <div class="row mt-2" data-controller="clipboard">
-  <div class="col-2">
-    Your unique URL
+  <div class="col-auto pt-2 ms-5">
+    <h5>Your unique URL</h5>
   </div>
   <div class="col-6">
     <input data-clipboard-target="source" class="form-control" type="text" value=<%= webhooks_create_url(subscriber_id: @subscriber.id) %> readonly>
+    <small class="text muted">Webhook requests can be POSTed to this URL</small>
   </div>
   <div class="col-auto mx-0 px-0">
     <button data-action="clipboard#copy" type="button" class="btn btn-default btn-copy js-tooltip js-copy mx-0 px-0" data-toggle="tooltip" data-placement="bottom" data-copy="john.doe@email.com" title="Copy to clipboard">
@@ -16,6 +26,6 @@
   </div>
 </div>
 <div id='event-wrapper' class="m-5 text-start">
-  <h4><%= @subscriber.name %> Events</h4>
+  <h5>Requests</h5>
   <%= render 'webhook_events', subscriber: @subscriber %>
 </div>
