--- a/app/views/webhook_events/_webhook_event.html.erb
+++ b/app/views/webhook_events/_webhook_event.html.erb
@@ -1,10 +1,11 @@
 <div class="row bg-white p-1 mt-3" id="<%= dom_id(webhook_event) %>" data-controller="beautifyjson">
-  <small class="text-muted">
-    <%= time_tag webhook_event.created_at, local_time(webhook_event.created_at, format: '%Y-%M-%d %H:%M.%S %Z') %>
-  </small>
-
-  <pre>
-    <div data-beautifyjson-target="payloadJson" data-actual-json="<%= JSON.pretty_generate(webhook_event.payload) %>">
+  <% if local_assigns[:highlight] %>
+    <div data-controller="highlight">
+      <%= render 'webhook_events/content', webhook_event: webhook_event  %>
     </div>
-  </pre>
+  <% else %>
+    <div>
+      <%= render 'webhook_events/content', webhook_event: webhook_event  %>
+    </div>
+  <% end %>
 </div>
