no requests message

--- a/app/views/subscribers/_webhook_events.html.erb
+++ b/app/views/subscribers/_webhook_events.html.erb
@@ -1,4 +1,4 @@
-<div id="webhook_events" class="container">
+<div id="webhook_events">
   <%= turbo_stream_from subscriber, :webhook_events %>
 
   <%= render subscriber.webhook_events.order('created_at DESC') %>
