--- a/app/views/webhook_events/_webhook_event.html.erb
+++ b/app/views/webhook_events/_webhook_event.html.erb
@@ -1,6 +1,6 @@
 <div class="row bg-white p-1 mt-3" id="<%= dom_id(webhook_event) %>" data-controller="beautifyjson">
   <% if local_assigns[:highlight] %>
-    <div data-controller="highlight hascontent">
+    <div data-controller="highlight has-content">
       <%= render 'webhook_events/content', webhook_event: webhook_event  %>
     </div>
   <% else %>
