--- a/app/views/subscribers/show.html.erb
+++ b/app/views/subscribers/show.html.erb
@@ -14,7 +14,7 @@
   </div>
   <div class="col-6">
     <input data-clipboard-target="source" class="form-control" type="text" value=<%= webhooks_create_url(subscriber_id: @subscriber.id) %> readonly>
-    <small class="text muted">Webhook requests can be POSTed to this URL</small>
+    <small class="text muted">HTTP POST requests can be made to this URL</small>
   </div>
   <div class="col-auto mx-0 px-0">
     <button data-action="clipboard#copy" type="button" class="btn btn-default btn-copy js-tooltip js-copy mx-0 px-0" data-toggle="tooltip" data-placement="bottom" data-copy="john.doe@email.com" title="Copy to clipboard">
