--- a/app/views/webhook_events/_content.html.erb
+++ b/app/views/webhook_events/_content.html.erb
@@ -1,5 +1,5 @@
 <small class="text-muted">
-  <%= time_tag webhook_event.created_at, local_time(webhook_event.created_at, format: '%Y-%M-%d %H:%M.%S %Z') %>
+  <%= time_tag webhook_event.created_at, local_time(webhook_event.created_at, format: '%Y-%m-%d %H:%M.%S %Z') %>
 </small>
 <div>
   <small class="text-muted">
