--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
+  <script src="https://kit.fontawesome.com/0cd9934564.js" crossorigin="anonymous"></script>
   <%= stylesheet_link_tag "application" %>
   <%= javascript_importmap_tags %>
 </head>
@@ -21,7 +22,8 @@
             Inspect and test HTTP requests.
           </p>
           <p class="text-muted">
-            Webhook Subscribers solves the problem of verifying that webhook requests are sent correctly or in the expected format.
+            Webhook Subscribers solves the problem of verifying that webhook requests are sent correctly or in the
+            expected format.
           </p>
         </div>
       </div>
@@ -37,9 +39,25 @@
           <strong>Webhook Subscribers</strong>
         </span>
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      <div class="row">
+        <div class="col">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
+        <% if current_user %>
+          <div class="col text-white pt-2">
+            <%= current_user.email %>
+          </div>
+          <div class="col">
+            <%= button_to "Logout", destroy_user_session_path, data: { turbo: "false" }, method: :delete, class: 'btn btn-primary' %>
+          </div>
+        <% else %>
+          <div class="col">
+            <%= link_to "Login", new_user_session_path, class: 'btn btn-primary' %>
+          </div>
+        <% end %>
+      </div>
     </div>
   </div>
 </header>
