--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -36,7 +36,7 @@
                      url: omniauth_authorize_path(resource_name, provider),
                      method: :post,
                      data: { turbo: "false" } do |f| %>
-          <%= f.submit "Login", type: "image", src: asset_path("/assets/btn_google_signin_dark_normal_web.png") %>
+          <%= f.submit "Login", type: "image", src: image_path("btn_google_signin_dark_normal_web.png") %>
         <% end %>
       </div>
     <% end %>
