--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,14 +40,24 @@
         </span>
       </a>
       <div class="row">
-        <div class="col">
+        <div class="col mt-0">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
         </div>
         <% if current_user %>
-          <div class="col text-white pt-2">
-            <%= current_user.email %>
+          <div class="col text-white">
+            <aside>
+              <img
+                title="<%= current_user.email %>"
+                width="36"
+                height="36"
+                class="avatar"
+                src="<%= current_user.avatar_url %>"
+                alt="Profile picture for <%= current_user.email %>"
+                />
+            </aside>
+            <%#= current_user.email %>
           </div>
           <div class="col">
             <%= button_to "Logout", destroy_user_session_path, data: { turbo: "false" }, method: :delete, class: 'btn btn-primary' %>
